# DAIS_project

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo_robot1.launch  gazebo_test_wrold.launch  gazebo_world.launch
marker/: CMakeLists.txt  package.xml
marker/src/: calibrate_cam_lidar.py  foxglove_boxes.py  marker.cpp  marker_human.cpp  platform_marker.cpp
models/mash/: kolo1.0.STL  kolo_test.STL  ogodje_test.STL  sickS300mini.STL  vozicek1.0.STL
models/urdf/: robot1.xacro
rviz/: description.rviz  robot1.rviz
simulation/launch/: gazebo_robot1.launch  gazebo_world.launch  human_spawn.launch  robot1_complete.launch
simulation/models/mash/: calculate_inertia.py
simulation/models/urdf/: robot1.xacro  robot1_parameters.xacro
simulation/models/urdf/casual_female/: model.sdf
simulation/src/: moving_human.py
simulation/worlds/: test.world  warehouse.world  warehouse_test.world
simulation/worlds/world_models/walls/: model.sdf
src/: platform_marker.cpp
worlds/: warehouse.world
